# Mai_OOP_Lab6_V15

./: CMakeLists.txt  README.md
tests/: test_balfate.cpp
